# Trabalho-Web-2023

./: README.md  requirements.txt
API_REST_TRABALHO/: pyproject.toml
API_REST_TRABALHO/src/: server.py
