[tool.poetry]
name = "api-rest-trabalho"
version = "0.1.0"
description = ""
authors = ["IanSiqueira <iancadori77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlmodel = "0.0.11"
psycopg2 = "^2.9.9"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
